# WikiSearch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  index  makefile  sqlx-data.json
.github/workflows/: build-publish-docker-image.yml
search/: Cargo.toml  launch.json  package-lock.json  rust-toolchain
search/api/: Cargo.toml
search/api/src/: endpoints.rs  grpc_server.rs  lib.rs  main.rs  structs.rs
search/benchmarks/: Cargo.toml
search/benchmarks/benches/: benchmarks.rs
search/index/: Cargo.toml
search/index/src/: collections.rs  errors.rs  index.rs  index_builder.rs  index_structs.rs  index_tests.rs  lib.rs  page_rank.rs  page_rank_test.rs  serialization.rs  utils.rs
search/index/src/serialization/: disk_backing.rs  disk_backing_old.rs  disk_backing_tests.rs  mod.rs  serialization.rs  serialization_tests.rs
search/integration_tests/: Cargo.toml
search/integration_tests/src/: integration_tests.rs  lib.rs
search/parser/: Cargo.toml
search/parser/src/: ast.rs  errors.rs  lib.rs  parser.rs  parser_tests.rs
search/retrieval/: Cargo.toml
search/retrieval/src/: lib.rs  query_correction.rs  query_correction_tests.rs  scoring.rs  scoring_tests.rs  search.rs  search_tests.rs
search/scoring/: Cargo.toml
search/scoring/src/: lib.rs  scoring.rs  scoring_tests.rs
search/staticfiles/: 404.html
search/utils/: Cargo.toml
search/utils/src/: lib.rs  utils.rs
src/: grpc_server.rs  lib.rs  main.rs
src/api/: endpoints.rs  mod.rs  structs.rs
src/ast_parser/: ast_parser.rs  enums.rs  mod.rs  structs.rs
src/index/: collections.rs  errors.rs  index.rs  index_builder.rs  index_structs.rs  mod.rs  utils.rs
src/parser/: ast.rs  ast_parser.rs  enums.rs  errors.rs  mod.rs  parser.rs  preprocess.rs  structs.rs
src/scoring/: scoring.rs
src/search/: mod.rs  search.rs  search_tests.rs
src/tests/: api_tests.rs  index_tests.rs  mod.rs  test_utils.rs  unit_tests.rs
src/unit_tests/: api_tests.rs  index_tests.rs  mod.rs  parser_tests.rs  scoring_tests.rs  search_tests.rs
src/utils/: mod.rs  test_utils.rs  utils.rs
staticfiles/: index.html
tests/: parser_tests.rs  search_tests.rs
