[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres", "offline" ] }
actix-web = "4.0.0-beta"
serde = "1.0.135"
futures = "0.3"
async-trait = "0.1.52"
either = "1.6.1"
api-rs = { git = "https://github.com/OnlyGraphs/api" }
tonic = "0.6.2"
nom="7.1.0"