[package]
name = "search"
version = "0.1.0"
edition = "2021"

[lib]
name = "search_lib"
path = "src/lib.rs"

[[bin]]
name = "search_api"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres", "offline" ] }
actix-web = "4.0.0-beta"
serde = "1.0.135"
futures = "0.3"
async-trait = "0.1.52"
either = "1.6.1"
api-rs = { git = "https://github.com/OnlyGraphs/api" }
tonic = "0.6.2"
nom = "6.1.2"
tokio = "1.0.1"
actix-files = "0.6.0-beta.2"
unicode-segmentation = "1.9.0"
bimap="0.6.2"
actix-cors="0.6.0-beta.10"
log = "0.4"
pretty_env_logger = "0.3"
mockall = "0.11.0"
itertools = "0.10.3"
actix-rt = "2.6.0"
strum_macros = "0.23"
strum = "0.23"
