[package]
name = "api"
version = "0.1.1"
edition = "2021"

[lib]
name = "search_lib"
path = "src/lib.rs"

[[bin]]
name = "search_api"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
index = { path = "../index" }
parser = { path = "../parser" }
retrieval = { path = "../retrieval" }

sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres", "offline" ] }
actix-web = "4.0.0-beta"
serde = "1.0.135"
futures = "0.3"
async-trait = "0.1.52"
api-rs = { git = "https://github.com/OnlyGraphs/api" }
tonic = "0.6.2"
actix-files = "0.6.0-beta.2"
actix-cors="0.6.0-beta.10"
log = "0.4"
pretty_env_logger = "0.3"
