[package]
name = "benchmarks"
version = "0.1.1"
edition = "2021"

[dev-dependencies]
index = { path = "../index" }
parser = { path = "../parser" }
retrieval = { path = "../retrieval" }
criterion = {version= "0.3", features= ["html_reports"]}
rand = "0.8.5"
itertools = "0.10.3"
streaming-iterator = "0.1.5"

[[bench]]
name = "benchmarks"
harness = false