[package]
name = "index"
version = "0.1.1"
edition = "2021"

[lib]
name = "index"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
parser = { path = "../parser" }
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres", "offline" ] }
async-trait = "0.1.52"
tonic = "0.6.2"
log = "0.4"
pretty_env_logger = "0.3"
chrono = "0.4"
bimap="0.6.2"
either = "1.6.1"
byteorder = "1.4.3"
uuid = {version = "0.8", features = ["v4"]}
indexmap = "1.8.0"
streaming-iterator = "0.1.5"
itertools = "0.10.3"
num-integer = "0.1.44"
parking_lot= "0.12.0"
default-env = "0.1.1"
ternary-tree="0.1.1"