[package]
name = "retrieval"
version = "0.1.1"
edition = "2021"

[lib]
name = "retrieval"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
parser = { path = "../parser" }
index = { path = "../index" }
preprocessor = { git = "https://github.com/OnlyGraphs/Preprocessor" }
itertools = "0.10.3"
chrono = "0.4"
log = "0.4"
pretty_env_logger = "0.3"
streaming-iterator = "0.1.5"
once_cell = "1.10.0"