[package]
name = "scoring"
version = "0.1.1"
edition = "2021"

[lib]
name = "scoring"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
index = { path = "../index" }
parser = { path = "../parser" }
preprocessor = { git = "https://github.com/OnlyGraphs/Preprocessor", branch="makspll-patch-1" }
